--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
             Cuando se sienten muy felices comienzan a ronronear, ¡Como si fueran unos gatos! 
             Es su manera de demostrar a su pareja o dueño que se siente cómodo en donde está o le gusta las acaricias que recibe.
+
+            Tanto los conejos salvajes como los conejos domésticos llegan a vivir 10 años o hasta más,
+            aunque mayormente los que viven en su hábitat rara vez pasan del primer año de edad ya que son capturados por depredadores.
+
+            Hay una confusión con respecto a los conejos, se cree que son roedores por su parecido físico, 
+            pero realmente son mamíferos lagomorfos ya que cuentan con notables diferentes. 
+            Se alimentan de verduras como zanahorias o lechugas y ciertos alimentos con fibra como la hierba o el heno, es decir, son herbívoros.
         </p>
 
         <p>
@@ -100,6 +107,15 @@
             Se limpian ellos mismos el pelaje constantemente y no necesitan ser bañados, en el caso de necesitar darle una limpieza a tu conejo 
             es recomendable llevarlo con un veterinario especializado que se encargue de hacer el trabajo. ¡No te vayas a asustar cuando lo estén bañando! 
             Ya que chillará debido a que no les gusta el agua.
+
+            Ciertos animales no tienen la capacidad de sudar y demuestran que tienen calor de otras maneras, pero los conejos sudan a través de las almohadillas ubicadas debajo de sus patas. 
+            Al tocarlas sabrás que necesitas acercarle un poco de agua o llevarlo a un lugar más fresco.
+
+            Se parecen a los gatos porque ronronean y se parecen a los perros porque, al igual que ellos, se tumban boca arriba para que les hagan cariños.
+            Cuando el conejo se siente cómodo y le tiene gran confianza a su dueño le gusta demostrar su amor al colocarse boca arriba para que le acaricien la barriga.
+
+            Cuando los conejos se sienten muy felices verás como empezarán a corretear de un lado a otro, saltan seguidamente y hacen piruetas en piso o en el aire, 
+            ¡Será muy entretenido y divertido para ambos!
         </p>
 
     </div>
